--- a/resumestyle.css
+++ b/resumestyle.css
@@ -7,7 +7,7 @@ div{
 	position: fixed;
 	width: 97.5%;
 	margin-top: -20px;
-	height: 60px;
+	height: 10%;
 	background-color: #FEEECD;
 	margin-bottom: 10px;
 }
