--- a/resumestyle.css
+++ b/resumestyle.css
@@ -32,9 +32,9 @@ a:hover{
 }
 
 img{
-	width:50px;
-	height:50px;
-	float:center;
+	width:400px;
+	height:300px;
+	float:left;
 	padding-top:5px;
 	margin-left:50%;
 }
