--- a/resumestyle-small.css
+++ b/resumestyle-small.css
@@ -49,7 +49,7 @@ img{
 	float: left;
 	margin-top: 50px;
 	width: 15%;
-	height: 550px;
+	height: 80%;
 	background-color: #A52A2A;
 	margin-bottom: 10px;
 }
@@ -59,7 +59,7 @@ img{
 	float: right;
 	margin-top: 50px;
 	width: 88%;
-	height: 1500px;
+	height: 90%;
 	background-color: #FDFDF0;
 	margin-bottom: 10px;
 }
