--- a/biostyle-small.css
+++ b/biostyle-small.css
@@ -1,3 +1,4 @@
+
 div{
 	border-radius:5px;
 }
@@ -7,7 +8,7 @@ div{
 	position: fixed;
 	width: 97.5%;
 	margin-top: -20px;
-	height: 5%;
+	height: 60px;
 	background-color: #FEEECD;
 	margin-bottom: 10px;
 }
@@ -16,30 +17,34 @@ div{
 	float:left;
 	margin-left: 5px;
 	padding-top: 5px;
-	font-size: 26px;
+	font-size: 20px;
 	font-family: Verdana, sans-serif;
 	color: #5F9EA0;
 }
 
 a{
 	text-decoration:none;
-	color:#5F9EA0;
+	color:#FFFFFF;
+	margin-left:50%;
 }
 
+a:hover{
+	text-decoration:none;
+	font-weight:bold;
+}
 
 img{
-	width:50px;
-	height:50px;
-	float:left;
+	width:400px;
+	height:300px;
 	padding-top:5px;
-	margin-left:40%;
+	margin-left:50%;
 }
 
 #email{
 	float:right;
 	margin-right: 5px;
 	padding-top: 5px;
-	font-size: 26px;
+	font-size: 16px;
 	font-family: Verdana, sans-serif;
 	color: #5F9EA0;
 }
@@ -48,8 +53,8 @@ img{
 	position: fixed;
 	float: left;
 	margin-top: 50px;
-	width: 15%;
-	height: 00%;
+	width: 10%;
+	height: 550px;
 	background-color: #A52A2A;
 	margin-bottom: 10px;
 }
@@ -59,7 +64,7 @@ img{
 	float: right;
 	margin-top: 50px;
 	width: 88%;
-	height: 90%;
+	height: 1350px;
 	background-color: #FDFDF0;
 	margin-bottom: 10px;
 }
@@ -87,7 +92,7 @@ span{
 
 #footer {
 	position: relative;
-	height: 5%;
+	height: 50px;
 	background-color: #EED5B7;
 	clear: both;
 	font-family: Verdana, sans-serif;
