--- a/indexstyle-small.css
+++ b/indexstyle-small.css
@@ -55,7 +55,7 @@ img{
 	float: left;
 	margin-top: 50px;
 	width: 10%;
-	height: 90%px;
+	height: 90%;
 	background-color: #A52A2A;
 	margin-bottom: 10px;
 }
