--- a/biostyle-small.css
+++ b/biostyle-small.css
@@ -8,7 +8,7 @@ div{
 	position: fixed;
 	width: 97.5%;
 	margin-top: -20px;
-	height: 60px;
+	height: 5%;
 	background-color: #FEEECD;
 	margin-bottom: 10px;
 }
