playing with margins for index

--- a/indexstyle-small.css
+++ b/indexstyle-small.css
@@ -7,7 +7,7 @@ div{
 	position: fixed;
 	width: 97.5%;
 	margin-top: -20px;
-	height: 10%;
+	height: 10px;
 	background-color: #FEEECD;
 	margin-bottom: 10px;
 }
