--- a/resumestyle-small.css
+++ b/resumestyle-small.css
@@ -22,6 +22,7 @@ div{
 }
 
 a{
+	font-size: 40px;
 	text-decoration:none;
 	color:#5F9EA0;
 }
@@ -48,7 +49,7 @@ img{
 	position: fixed;
 	float: left;
 	margin-top: 50px;
-	width: 15%;
+	width: 20%;
 	height: 90%;
 	background-color: #A52A2A;
 	margin-bottom: 10px;
