--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,15 @@
 @charset "utf-8";
 
-* {	font-family: 'Lato', sans-serif; margin: 0 auto; }
+* {	font-family: 'Lato', sans-serif; margin: 0 auto; 
+	background-color: rgb(255,255,245)
+}
 
 
 /* Container styles */
+
+a {
+	color: ;
+}
 
 .center-600 {
 	margin: 0 auto;
@@ -41,7 +47,7 @@ nav a {
 .nav-effect a {
 	margin: 15px;
 	padding: 10px;
-	color: gray;
+	color: rgb(204,50,50);
 	text-shadow: none;
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -54,7 +60,7 @@ nav a {
 	left: 0;
 	width: 100%;
 	height: 2px;
-	background:  rgb(51, 153, 204);
+	background:  rgb(204,50,50);
 	content: '';
 	opacity: 0;
 	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -81,7 +87,7 @@ nav a {
 
 .nav-effect a:hover,
 .nav-effect a:focus {
-	color: rgb(51, 153, 204);
+	color: rgb(139,37,0);
 }
 
 .nav-effect a:hover::before,
