--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,11 @@ a:link {
 }
 
 a:visited{
-	color:rgb(204,50,50);
+	color:rgb(139,37,0)
 }
 
 a:hover {
-	color:rgb(255,237,243);
+	color:rgb(204,50,50);
 }
 
 a:active{
