--- a/style/index.css
+++ b/style/index.css
@@ -77,7 +77,7 @@ footer {
 	margin: auto;
 	color: lightgray;
 	clear: both;
-	text-align: center;
+	text-align: left;
 	position: absolute;
 	bottom: 40px;
 	visibility: visible;
