--- a/new_design/style/index.css
+++ b/new_design/style/index.css
@@ -2,17 +2,18 @@
 
 /* Image Styles */
 
+body{
+	background-image: url('../images/cmucortex.jpg');
+	opacity: 0.15;
+	width: 100%;
+	height: 100vh;
+}
 
 .header {
 	height:100px;
-	background: #F0F0F0;
-	border:1px solid;
+	background-color: rgba(255,161,194,0.1);
 	width: 100%
 	margin: 0px auto;
-}
-
-header a{
-	background-color: blue;
 }
 
 .header img{
@@ -30,15 +31,7 @@ header a{
 }
 
 .content-banner{
-    background: #837960 url("images/background.jpg") 0 0 no-repeat;
 
-    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(130,91,0,1) 100%);   /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(130,91,0,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(130,91,0,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(130,91,0,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(130,91,0,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(130,91,0,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#825b00',GradientType=0 ); /* IE6-9 */
 }
 
 .lower-content{
