--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,11 @@ h4.modal-title {
     color: #fff;
 	text-align:center;
 }
+h5.modal-title {
+    font-size: 1.5em;
+    color: #fff;
+    text-align:center;
+}
 /*-- //modal-basic --*/
 /*-- about --*/
 .about h3 {
@@ -307,6 +312,11 @@ p {
     font-weight: 800;
 }
 .experience-left h5 {
+    font-size: 1em;
+    color: #fff;
+    margin-top: 1em;
+}
+.experience-left h6 {
     font-size: 1em;
     color: #fff;
     margin-top: 1em;
