--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body a:hover{
 }
 /*-- top-nav --*/  
 .top-nav {
-    background: #EBA4AC;
+    background: #E99CA6;
 }
 .nav > li {
     display: inline-block;
@@ -54,7 +54,7 @@ ul.nav.navbar li a {
     font-family: 'Text Me One', sans-serif;
 }
 ul.nav.navbar li a:hover,ul.nav.navbar li a.active{ 
-	color:#EBA4AC;
+	color:#E99CA6;
 	background:transparent;
 	outline:none;
 } 
@@ -193,7 +193,7 @@ h5.modal-title {
     color: #fff;
 }
 .about h3 span {
-    color: #EBA4AC;
+    color: #E99CA6;
 }
 .about h4 {
     font-size: 1.2em;
@@ -233,7 +233,7 @@ ul.address li ul.agileits-address-text li a {
 	text-decoration:none;
 }
 ul.address li ul.agileits-address-text li a:hover{
-    color: #F5F2E1;
+    color: #E79EA7;
 } 
 .about-text {
     padding: 3em 3em  0;
@@ -275,7 +275,7 @@ p {
     border-radius: 0;
 }
 .progress-bar { 
-    background-color: #EBA4AC;
+    background-color: #E99CA6;
 }
 .bar-grids h6 {
     font-size: 1em;
@@ -299,10 +299,10 @@ p {
 .experience-left {
     float: left;
     width: 30%;
-    background: #EBA4AC;
+    background: #E99CA6;
     text-align: center;
     padding: 2em 0;
-    border: 2px solid #EBA4AC;
+    border: 2px solid #E99CA6;
 	-webkit-transition: .5s all;
 	-moz-transition: .5s all;
 	transition: .5s all;
@@ -312,7 +312,7 @@ p {
 .experience-right {
     float: right;
     width: 70%;
-    border: 1px solid #EBA4AC;
+    border: 1px solid #E99CA6;
 	padding: 1.5em;
 }
 .experience-left h3 {
@@ -370,11 +370,14 @@ p {
     filter: alpha(opacity=100);
 	border: 2px solid #F5F2E1;
 }
+.gallery-w3ls-hover .view-caption h5 {
+    color: #F5F2E1;
+}
 .gallery-w3ls-hover img { 
 	width: 100%;
 }
 .gallery-w3ls-hover .view-caption {
-	background-color: rgba(236, 64, 122, 0.85);
+	background-color: rgba(229, 137, 146, 0.85);
 	border: 5px solid #fff;
 	bottom: 0;
 	color: #fff;
@@ -460,7 +463,7 @@ p {
 	display: block;
 	width: 0;
 	height:2px;
-	background:#EBA4AC;
+	background:#E99CA6;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -473,7 +476,7 @@ p {
 }
 .styled-input input:focus ~ label, .styled-input input:valid ~ label,.styled-input textarea:focus ~ label ,.styled-input textarea:valid ~ label{
     font-size: 1.1em;
-    color: #EBA4AC;
+    color: #E99CA6;
     top: -1.3em;
     -webkit-transition: all 0.125s;
 	-moz-transition: all 0.125s; 
@@ -498,8 +501,8 @@ p {
     font-size: 1em;
     margin: 1em 0 0 0;
     -webkit-appearance: none;
-    background: #EBA4AC;
-    border: solid 1px #EBA4AC;
+    background: #E99CA6;
+    border: solid 1px #E99CA6;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
 	-o-border-radius: 3px;
@@ -665,7 +668,7 @@ p.agile-br {
     border: none;
     box-shadow: none;
     position: absolute;
-    background: #EBA4AC;
+    background: #E99CA6;
     width: 100%;
     z-index: 9;
 }
@@ -734,7 +737,7 @@ h4.modal-title {
     width: 50%; 
 }
 .gallery-w3ls-hover:hover .view-caption { 
-    border: 5px solid #fff;
+    border: 5px solid #E99CA6;
 }
 .gallery-w3ls-hover:hover .view-caption h5 {
     padding-top: 23%;
