--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,7 @@ p {
 }
 .gallery-w3ls-hover img { 
 	width: 100%;
+    height: 150px;
 }
 .gallery-w3ls-hover .view-caption {
 	background-color: rgba(229, 137, 146, 0.85);
