--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,15 @@ ul,label{
 	margin:0;
 	padding:0;
 }
+.icon-link {
+    width: 10%;
+    /* padding-top: 1em; */
+    display: inline-flex;
+    /* padding-right: 1em; */
+    border-radius: 10%;
+    margin-right: 1em;
+    margin-top: 3em;
+}
 body a:hover{
 	text-decoration:none;
 }
@@ -108,7 +117,6 @@ ul.nav.navbar li a.w3ls-icon:hover {
 }
 .banner-text {
     margin-top: 2em;
-    margin-bottom: 20em;
     text-align: center;
     background: rgba(16, 5, 0, 0.5);
     display: inline-block;
@@ -116,7 +124,6 @@ ul.nav.navbar li a.w3ls-icon:hover {
 }
 .banner-text.agileinfo-text {
     margin-top: 2em;
-    margin-bottom: 20em;
 }
 .banner-text h1 {
     font-size: 3.5em;
@@ -605,7 +612,6 @@ p {
 }
 @media(max-width:1024px){
 .banner-text {
-    margin: 22em 0 7.1em; 
 }
 .modal-dialog {
     width: 80%;
@@ -623,7 +629,6 @@ ul.nav.navbar li a {
     font-size: 3.2em; 
 }
 .banner-text {
-    margin: 22em 0 6em;
     padding: 3em;
 }
 .about-left img {
@@ -771,7 +776,6 @@ ul.nav.navbar li a {
 }
 @media(max-width:736px){
 .banner-text {
-    margin: 19em 0 6em; 
 }
 .banner-text h1 {
     font-size: 2.5em;
@@ -783,7 +787,6 @@ ul.nav.navbar li a {
 }
 @media (max-width: 667px){
 .banner-text {
-    margin: 16em 0 6em;
 }
 }
 @media(max-width:640px){
@@ -894,7 +897,6 @@ h4.modal-title {
 }
 @media(max-width:414px){
 .banner-text {
-    margin: 23.5em 0 6em;
 	padding: 2em;
 }  
 .footer p { 
@@ -962,7 +964,6 @@ ul.address li ul.agileits-address-text li {
 }
 @media(max-width:384px){
 .banner-text {
-    margin: 16.6em 0 6em;
 }
 .banner-text h1 {
     font-size: 1.8em;
@@ -1005,7 +1006,6 @@ h4.modal-title {
     font-size: 0.9em; 
 }
 .banner-text {
-    margin: 15em 0 2.6em;
 	padding: 1.2em 1.5em;
 }
 .nav > li {
